--- a/src/pages/Events.css
+++ b/src/pages/Events.css
@@ -120,6 +120,13 @@
 
 .event-description {
   margin-top: var(--spacing-sm);
+  overflow: hidden;
+  /* stylelint-disable-next-line */
+  display: -webkit-box;
+  /* stylelint-disable-next-line */
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3;
+  line-clamp: 3;
 }
 
 .organizer-link {
